--- a/1.07/11_13/code_along/answers.ipynb
+++ b/1.07/11_13/code_along/answers.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4                        43.1  "
       ]
      },
-     "execution_count": 149,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "max                    117.500000  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "max                    117.500000  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "<Axes: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        "<Axes: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
        "5        7.1        2175.0300                     3.0                 32.1"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
        "      <td>306.5947</td>\n",
        "      <td>9.0</td>\n",
        "      <td>42.2</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -922,7 +922,7 @@
        "      <td>561.9845</td>\n",
        "      <td>5.0</td>\n",
        "      <td>47.3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -938,7 +938,7 @@
        "      <td>390.5684</td>\n",
        "      <td>5.0</td>\n",
        "      <td>43.1</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -946,7 +946,7 @@
        "      <td>2175.0300</td>\n",
        "      <td>3.0</td>\n",
        "      <td>32.1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -961,14 +961,14 @@
        "5        7.1        2175.0300                     3.0                 32.1   \n",
        "\n",
        "   num_of_rooms  \n",
-       "1             4  \n",
-       "2             3  \n",
+       "1             2  \n",
+       "2             2  \n",
        "3             4  \n",
-       "4             4  \n",
-       "5             1  "
+       "4             3  \n",
+       "5             3  "
       ]
      },
-     "execution_count": 166,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1005,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>house age</th>\n",
+       "      <th>distance_to_mrt</th>\n",
+       "      <th>num_convenience_stores</th>\n",
+       "      <th>price_per_unit_area</th>\n",
+       "      <th>num_of_rooms</th>\n",
+       "      <th>pet_friendly</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19.5</td>\n",
+       "      <td>306.5947</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>42.2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13.3</td>\n",
+       "      <td>561.9845</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>47.3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13.3</td>\n",
+       "      <td>561.9845</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>54.8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>390.5684</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>7.1</td>\n",
+       "      <td>2175.0300</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>32.1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   house age  distance_to_mrt  num_convenience_stores  price_per_unit_area  \\\n",
+       "1       19.5         306.5947                     9.0                 42.2   \n",
+       "2       13.3         561.9845                     5.0                 47.3   \n",
+       "3       13.3         561.9845                     5.0                 54.8   \n",
+       "4        5.0         390.5684                     5.0                 43.1   \n",
+       "5        7.1        2175.0300                     3.0                 32.1   \n",
+       "\n",
+       "   num_of_rooms pet_friendly  \n",
+       "1             2           No  \n",
+       "2             2           No  \n",
+       "3             4           No  \n",
+       "4             3           No  \n",
+       "5             3          Yes  "
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add pet column to csv\n",
+    "# part in credit to ChatGPT\n",
+    "\n",
+    "# Function to assign pet-friendly status\n",
+    "def assign_pet_friendly(distance):\n",
+    "    if distance > 812.82462:\n",
+    "        # Most apartments above mean distance are pet-friendly\n",
+    "        return \"Yes\" if np.random.rand() > 0.25 else \"No\"  # 75% chance of being pet-friendly\n",
+    "    else:\n",
+    "        # Most apartments below mean distance are not pet-friendly\n",
+    "        return \"No\" if np.random.rand() > 0.15 else \"Yes\"  # 85% chance of not being pet-friendly\n",
+    "\n",
+    "# Create 'pet_friendly' column\n",
+    "df_new['pet_friendly'] = df_new['distance_to_mrt'].apply(assign_pet_friendly)\n",
+    "\n",
+    "# Displaying the first few rows of the updated DataFrame\n",
+    "df_new.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
