--- a/phase_2/2.08/2.26/python_exercises.ipynb
+++ b/phase_2/2.08/2.26/python_exercises.ipynb
@@ -20,12 +20,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def email_extract(s):\n",
-    "    ..."
+    "    # find where the \"@\" is\n",
+    "    at_pos = s.find(\"@\") + 1\n",
+    "\n",
+    "    # get all letters after the \"@\"\n",
+    "    return s[at_pos:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@yahoo.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "email_extract(\"faruk@yahoo.com\")"
    ]
   },
   {
@@ -164,8 +185,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "phase1",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
