--- a/phase_2/2.08/sentiment/sentiment.ipynb
+++ b/phase_2/2.08/sentiment/sentiment.ipynb
@@ -57,13 +57,15 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# nltk\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('wordnet')\n",
+    "\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from  nltk.stem import SnowballStemmer, WordNetLemmatizer\n",
     "\n",
     "import re\n",
-    "\n",
-    "nltk.download('punkt')\n",
     "\n",
     "# Word2vec\n",
     "from gensim.models import Word2Vec\n",
