--- a/phase_2/2.08/2.27/pandas_exercises_I.ipynb
+++ b/phase_2/2.08/2.27/pandas_exercises_I.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "            2022  20.137"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "4        AnitaKoch  @lkhalladay Colorado's a beautiful state, but ...  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -812,72 +812,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>@USEOFFORCEENT</td>\n",
+       "      <th>76793</th>\n",
+       "      <td>michele1993</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>17224</th>\n",
+       "      <td>JGDemas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>41012</th>\n",
+       "      <td>sazmows</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>44129</th>\n",
+       "      <td>ohmanitsjessa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>@lkhalladay</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199995</th>\n",
-       "      <td>@j</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199996</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199997</th>\n",
-       "      <td>@ArcherIsMyName</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199998</th>\n",
-       "      <td>@fald</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199999</th>\n",
-       "      <td>@ether</td>\n",
+       "      <th>20273</th>\n",
+       "      <td>menchuly</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>200000 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      0\n",
-       "0        @USEOFFORCEENT\n",
-       "1                   NaN\n",
-       "2                   NaN\n",
-       "3                   NaN\n",
-       "4           @lkhalladay\n",
-       "...                 ...\n",
-       "199995               @j\n",
-       "199996              NaN\n",
-       "199997  @ArcherIsMyName\n",
-       "199998            @fald\n",
-       "199999           @ether\n",
-       "\n",
-       "[200000 rows x 1 columns]"
+       "                   0\n",
+       "76793    michele1993\n",
+       "17224        JGDemas\n",
+       "41012        sazmows\n",
+       "44129  ohmanitsjessa\n",
+       "20273       menchuly"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +853,8 @@
     "# Q3\n",
     "# TODO: Write a pandas line of code that uses regex to extract other users that have been tagged via an \"@\" (this one is tricky) in the \"tweets\" column\n",
     "\n",
-    "..."
+    "df.tweet.str.extract(\"@(\\w+)\").dropna().sample(5)\n",
+    "# df[df.tweet.str.contains(r\"@(\\w+)\")].tweet"
    ]
   }
  ],
