--- a/phase_2/2.08/2.28/pandas_case_study.ipynb
+++ b/phase_2/2.08/2.28/pandas_case_study.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Pandas Jobs case study + Word2Vec\n",
     "\n",
-    "Your analytics consulting company, `Central Tendecy` has recently been awarded a contract from the recruitment-advertisement tech-company `InRecruit`. You've been tasked with working on a team of other analysts in order to generate a comprehensive pipeline & analysis of real job-data that have been scraped since 11/4/2022.\n",
+    "Your analytics consulting company, `Central Tendency` has recently been awarded a contract from the recruitment-advertisement tech-company `InRecruit`. You've been tasked with working on a team of other analysts in order to generate a comprehensive pipeline & analysis of real job-data that have been scraped since 11/4/2022.\n",
     "\n",
     "Mainly, `InRecruit` seeks to address the following inferential questions:\n",
     "\n",
@@ -14,6 +14,7 @@
     "* Which cities are hiring the most data-analysts?\n",
     "* Which companies are hiring the most data-analysts?\n",
     "* How do salary outcomes differ between remote-work & non-remote work?\n",
+    "* How are salaries changing since 2022?\n",
     "* How can we predict the salary of a position based on predictive features\n",
     "* Can we train a word2vec model on the companies `description` column to learn about \"skill-clusters\"?\n",
     "\n",
@@ -48,6 +49,7 @@
     "* Which cities are hiring the most data-analysts?\n",
     "* Which companies are hiring the most data-analysts?\n",
     "* How do salary outcomes differ between remote-work & non-remote work?\n",
+    "* How are salaries changing since 2022?\n",
     "\n",
     "**Data Modeling** \n",
     "\n",
